<resources>
    <string name="app_name">Frag LifeCycle</string>
    <string name="add_fragment">Add</string>
    <string name="replace_top_fragment">Replace</string>
    <string name="remove_top_fragment">Remove</string>
    <string name="hide_show_top_fragment">Hide/Show</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_fragment">No Fragment added</string>
    <string name="count">%1$d Fragment</string>
    <string name="clear">Clear</string>
</resources>
