<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"


    tools:context=".ui.main.MainActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_red_button"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".70">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_fragment"
            android:textColor="@android:color/black" />

    </FrameLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        app:layout_constraintWidth_percent=".25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_red_button"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_frag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_fragment"

            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/remove_frag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/remove_frag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/remove_top_fragment"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/hide_frag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_frag" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hide_frag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hide_show_top_fragment"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/replace_frag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remove_frag" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/replace_frag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/replace_top_fragment"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/clear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hide_frag" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/clear"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/replace_frag" />
    </androidx.constraintlayout.widget.ConstraintLayout>




    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_red_button"
        android:fillViewport="true"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/txt_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            tools:text="Your log will appear \n here \n" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>